<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fc_background"
    android:padding="@dimen/fc_padding_large">

    <ImageView
        android:id="@+id/icon_location"
        android:layout_width="@dimen/fc_onboarding_icon_size"
        android:layout_height="@dimen/fc_onboarding_icon_size"
        android:src="@android:drawable/ic_menu_mylocation"
        android:contentDescription="@string/fc_location_icon"
        app:tint="@color/fc_primary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_title"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fc_onboarding_location_title"
        android:textSize="@dimen/fc_text_heading"
        android:textColor="@color/fc_text_primary"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="@dimen/fc_padding_large"
        app:layout_constraintTop_toBottomOf="@id/icon_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_description" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fc_onboarding_location_description"
        android:textSize="@dimen/fc_text_body"
        android:textColor="@color/fc_text_secondary"
        android:gravity="center"
        android:layout_marginTop="@dimen/fc_padding_medium"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_share_location" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_share_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fc_share_location"
        android:layout_marginTop="@dimen/fc_padding_extra_large"
        android:layout_marginHorizontal="@dimen/fc_padding_large"
        app:backgroundTint="@color/fc_primary"
        app:cornerRadius="@dimen/fc_corner_radius"
        app:layout_constraintTop_toBottomOf="@id/text_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_skip_location" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_skip_location"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fc_skip"
        android:textColor="@color/fc_text_secondary"
        android:layout_marginTop="@dimen/fc_padding_medium"
        app:layout_constraintTop_toBottomOf="@id/btn_share_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
