<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fc_background">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fc_onboarding_language_title"
        android:textSize="@dimen/fc_text_heading"
        android:textColor="@color/fc_text_primary"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="@dimen/fc_padding_large"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fc_onboarding_language_subtitle"
        android:textSize="@dimen/fc_text_body"
        android:textColor="@color/fc_text_secondary"
        android:gravity="center"
        android:paddingHorizontal="@dimen/fc_padding_large"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_languages"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/fc_padding_medium"
        android:padding="@dimen/fc_padding_medium"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/text_subtitle"
        app:layout_constraintBottom_toTopOf="@id/btn_get_started"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/text_subtitle"
        app:layout_constraintBottom_toTopOf="@id/btn_get_started"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_get_started"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fc_get_started"
        android:layout_margin="@dimen/fc_padding_large"
        app:backgroundTint="@color/fc_primary"
        app:cornerRadius="@dimen/fc_corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
